// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="form-label label"
>
  <label
    className="FormLabel"
    htmlFor="input"
  >
    Name
  </label>
</div>
`;

exports[`renders with translation key 1`] = `
<div
  className="form-label"
>
  <label
    className="FormLabel"
  >
    label.default_name
  </label>
</div>
`;
